Lyckades få in bilden med hjälp av Mohammad Haydar som länkade bild

--- a/webbutveckling_1/assignment/css/style.css
+++ b/webbutveckling_1/assignment/css/style.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url(img./Waves.jpg);
+    background-image: url(../img/Waves.jpg);
+    background-size: 100%;
 }
 
 #navbar {
