Börjar med att fylla på products och skapar 2x2 columns.

--- a/webbutveckling_1/assignment/css/style.css
+++ b/webbutveckling_1/assignment/css/style.css
@@ -30,3 +30,25 @@ body {
 .active {
     background-color: #04AA6D;
 }
+
+.header {
+    text-align: center;
+    padding-bottom: 2em;
+}
+* {
+    box-sizing: border-box;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px;
+    border: 2px solid black;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
