--- a/webbutveckling_1/assignment/css/style.css
+++ b/webbutveckling_1/assignment/css/style.css
@@ -47,29 +47,70 @@ footer {
     color: white;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .column1 {
     float: left;
-    width: 40%;
+    width: 50%;
     height: 300px;
-    padding-left: 4em;
+    padding-left: 3em;
+    border: 2px solid black;
 }
 
 .column2 {
     float: left;
-    width: 20%;
-    height: 500px;
-    padding-left: 4em;
+    width: 50%;
+    height: 300px;
+    padding-left: 3em;
+    border: 2px solid black;
 }
 
 .column3 {
     float: left;
-    width: 43%;
-    height: 500px;
-    padding-left: 4em;
+    width: 50%;
+    height: 300px;
+    padding-left: 3em;
+    border: 2px solid black;
 }
 
 .column4 {
     float: left;
     width: 50%;
     height: 300px;
+    padding-left: 3em;
+    border: 2px solid black;
+}
+
+.column5 {
+    float: left;
+    width: 50%;
+    height: 300px;
+    padding-left: 3em;
+    border: 2px solid black;
+}
+
+.column6 {
+    float: left;
+    width: 50%;
+    height: 300px;
+    padding-left: 3em;
+    border: 2px solid black;
+}
+
+.column1b {
+    float: left;
+    width: 50%;
+    height: 500px;
+    padding-left: 4em;
+    border: 2px solid black;
+}
+
+.column2b {
+    float: left;
+    width: 50%;
+    height: 500px;
+    padding-left: 4em;
+    border: 2px solid black;
 }
