--- a/webbutveckling_1/assignment/css/style.css
+++ b/webbutveckling_1/assignment/css/style.css
@@ -179,3 +179,15 @@ table, th, td {
     margin-left: auto;
     margin-right: auto;
 }
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+}
