--- a/webbutveckling_1/Lektioner/2021-09-13/grid/responsive-grid/style.css
+++ b/webbutveckling_1/Lektioner/2021-09-13/grid/responsive-grid/style.css
@@ -9,9 +9,8 @@ body {
 
 .item-a {
     grid-area: header;
-    background-color: #5f93eB;
+    background-color: #5f93e8;
     height: 3em;
-    text-align: center;
 }
 
 .item-b {
@@ -36,16 +35,48 @@ body {
     grid-area: footer;
     background-color: orange;
     height: 2em;
-    text-align: center;
 }
 
+/*mobile*/
 .container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto;
     grid-template-areas:
-    "nav nav nav nav"
-    "header header header header"
+    "header"
+    "nav"
+    "main"
+    "aside"
+    "footer";
+}
+
+/*tablet*/
+@media only screen and (min-width: 768px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:
+    "header nav"
+    "main main"
+    "aside aside"
+    "footer footer";
+    }
+
+    /* Ärvs över till desktop */
+    .item-a {background-color: red;}
+    .item-b {background-color: indianred;}
+    .item-c {background-color: greenyellow;}
+    .item-d {background-color: darkolivegreen;}
+    .item-e {background-color: moccasin;}
+}
+
+
+/*desktop*/
+@media only screen and (min-width: 1200px) {
+    .container {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-areas:
+    "header nav nav nav"
     "main main main aside"
-    "footer footer footer footer"
+    "footer footer footer footer";
+    }
 }
