--- a/webbutveckling_1/assignment/css/productsstyle.css
+++ b/webbutveckling_1/assignment/css/productsstyle.css
@@ -6,6 +6,7 @@ body {
     background-image: url(../img/Waves.jpg);
     background-size: 100%;
     margin: 0;
+    padding-bottom: 68px;
 }
 
 .header {
