Har gjort en del småsaker ikväll. Lagt till bild, bytt bild. Centrerat text i en grid. Lagt till video i iframe som skalar.

--- a/webbutveckling_1/assignment/css/productsstyle.css
+++ b/webbutveckling_1/assignment/css/productsstyle.css
@@ -19,6 +19,11 @@ body {
     margin-right: auto;
 }
 
+.center-text-horisontally-in-grid {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .text-left-image-right {
     display: grid;
     border: 2px solid black;
