--- a/webbutveckling_1/assignment/css/bloggstyle.css
+++ b/webbutveckling_1/assignment/css/bloggstyle.css
@@ -4,7 +4,59 @@
 
 body {
     background-image: url(../img/Waves.jpg);
-    background-size: 100%;
+    background-size: cover;
     margin: 0;
-    padding-bottom: 68px;
+    padding-bottom: 92px;
+    text-align: center;
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 2em;
+}
+
+textarea {
+    resize: none;
+}
+
+div {
+    border: 2px solid black;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+.image-width {
+    width: 80%;
+}
+
+.zoom {
+    transition: transform .2s;
+    margin: 0 auto;
+}
+
+.zoom:hover {
+    -ms-transform: scale(2.0); /* IE 9 */
+    -webkit-transform: scale(2.0); /* Safari 3-8 */
+    transform: scale(2.0);
+}
+
+/* Tablet */
+@media only screen and (min-width: 768px) {
+    main {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+
+}
+
+/* Desktop */
+@media only screen and (min-width: 1200px) {
+    main {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .image-width {
+        width: 60%;
+    }
 }
