--- a/webbutveckling_1/assignment/css/coursesstyle.css
+++ b/webbutveckling_1/assignment/css/coursesstyle.css
@@ -4,10 +4,11 @@
 
 body {
     background-image: url(../img/Waves.jpg);
-    background-size: 100%;
+    background-size: cover;
     margin: 0;
-    padding-bottom: 68px;
+    padding-bottom: 92px;
 }
+
 
 header {
     text-align: center;
