--- a/webbutveckling_1/assignment/css/navbarstyle.css
+++ b/webbutveckling_1/assignment/css/navbarstyle.css
@@ -9,7 +9,7 @@
 
 
 .navbar-item {
-    display: inline-block;
+    float: contour;
 }
 
 .navbar-link {
@@ -25,4 +25,14 @@
 
 .active {
     background-color: mediumaquamarine;
+}
+
+@media only screen and (min-width: 768px) {
+    .navbar-item {
+        display: inline-block;
+    }
+    #navbar {
+        text-align: center;
+    }
+
 }
