--- a/webbutveckling_1/assignment/css/coursesstyle.css
+++ b/webbutveckling_1/assignment/css/coursesstyle.css
@@ -15,6 +15,14 @@ header {
     padding-bottom: 2em;
 }
 
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+
+
+}
+
 .center-text-over-chart {
     text-align: center;
     padding-bottom: 2em;
@@ -23,6 +31,7 @@ header {
 .center-chart-on-screen {
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .bgc-aliceblue {
@@ -54,7 +63,14 @@ header {
     background-color: #04AA6D;
 }
 
+.remove-when-mobile {
+    display: none;
+}
+
 @media only screen and (min-width: 768px) {
+    .remove-when-mobile {
+        display: block;
+    }
 
 }
 
