--- a/webbutveckling_1/assignment/css/otherstyle.css
+++ b/webbutveckling_1/assignment/css/otherstyle.css
@@ -19,9 +19,14 @@ main {
     grid-template-columns: repeat(1, 1fr);
 }
 
+.center-text-over-iframe {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .iframe-container {
     position: relative;
-    width: 60%;
+    width: 80%;
     overflow: hidden;
     padding-top: 56.25%; /* 16:9 Aspect Ratio */
     margin-left: auto;
