--- a/webbutveckling_1/assignment/css/footerstyle.css
+++ b/webbutveckling_1/assignment/css/footerstyle.css
@@ -6,4 +6,22 @@ footer {
     text-align: center;
     background-color: #666;
     color: white;
+    display: block;
+}
+
+.footer-item {
+    width: 100%;
+    margin: auto 0;
+}
+
+
+
+@media screen and (min-width: 768px) {
+    footer{
+        display: flex;
+    }
+    .footer-item {
+        width: 100%;
+        margin: auto 0;
+    }
 }
