--- a/webbutveckling_1/assignment/css/bloggstyle.css
+++ b/webbutveckling_1/assignment/css/bloggstyle.css
@@ -6,7 +6,7 @@ body {
     background-image: url(../img/Waves.jpg);
     background-size: cover;
     margin: 0;
-    padding-bottom: 92px;
+    padding-bottom: 156px;
     text-align: center;
 }
 
@@ -16,47 +16,72 @@ main {
     padding: 2em;
 }
 
-textarea {
-    resize: none;
-}
-
 div {
     border: 2px solid black;
     padding-left: 2em;
     padding-right: 2em;
+    width: 90%;
+    margin: auto;
+}
+
+.irrelevant-on-tablet-and-mobile {
+    display: none;
 }
 
 .image-width {
-    width: 80%;
+    width: 100%;
 }
 
-.zoom {
-    transition: transform .2s;
-    margin: 0 auto;
-}
-
-.zoom:hover {
-    -ms-transform: scale(2.0); /* IE 9 */
-    -webkit-transform: scale(2.0); /* Safari 3-8 */
-    transform: scale(2.0);
+.container {
+    background-color: white;
+    margin-bottom: 10em;
 }
 
 /* Tablet */
 @media only screen and (min-width: 768px) {
     main {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 
+    .image-width {
+        width: 50%;
+    }
 
+    .irrelevant-on-tablet-and-mobile {
+        display: none;
+    }
 }
 
 /* Desktop */
 @media only screen and (min-width: 1200px) {
     main {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    div {
+        border: 2px solid black;
+        padding-left: 2em;
+        padding-right: 2em;
+        width: 50%;
+        margin: auto;
     }
 
     .image-width {
-        width: 60%;
+        width: 40%;
+    }
+
+    .zoom {
+        transition: transform .2s;
+        margin: 0 auto;
+    }
+
+    .zoom:hover {
+        -ms-transform: scale(1.3); /* IE 9 */
+        -webkit-transform: scale(1.3); /* Safari 3-8 */
+        transform: scale(1.3);
+    }
+
+    .irrelevant-on-tablet-and-mobile {
+        display: block;
     }
 }
