--- a/webbutveckling_1/assignment/css/productsstyle.css
+++ b/webbutveckling_1/assignment/css/productsstyle.css
@@ -31,6 +31,8 @@ body {
     margin-right: auto;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto;
+    background-color: white;
+    margin-bottom: 10em;
 }
 
 .img-responsive {
@@ -46,6 +48,8 @@ body {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    background-color: white;
+    margin-bottom: 10em;
 }
 
 @media only screen and (min-width: 768px) {
