--- a/webbutveckling_1/assignment/css/coursesstyle.css
+++ b/webbutveckling_1/assignment/css/coursesstyle.css
@@ -6,7 +6,7 @@ body {
     background-image: url(../img/Waves.jpg);
     background-size: cover;
     margin: 0;
-    padding-bottom: 92px;
+    padding-bottom: 170px;
 }
 
 
@@ -68,6 +68,10 @@ header {
 @media only screen and (min-width: 768px) {
     .remove-when-mobile {
         display: block;
+    }
+
+    body {
+        padding-bottom: 100px;
     }
 
 }
