--- a/webbutveckling_1/assignment/css/productsstyle.css
+++ b/webbutveckling_1/assignment/css/productsstyle.css
@@ -33,10 +33,15 @@ body {
     grid-template-rows: auto;
     background-color: white;
     margin-bottom: 10em;
-    padding: 4px;
+    padding: 2em;
 }
 
 .img-responsive {
+    width: 100%;
+    max-width: 500px;
+}
+
+.img-responsive2 {
     width: 100%;
     max-width: 500px;
 }
@@ -51,12 +56,17 @@ body {
     margin-right: auto;
     background-color: white;
     margin-bottom: 10em;
-    padding: 4px;
+    padding: 2em;
 }
 
 @media only screen and (min-width: 768px) {
     .text-left-image-right {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .img-responsive2 {
+        width: 60%;
+        max-width: 500px;
     }
 
 }
