Klar med i princip allt. Har en grej i about som jag får be Lars kolla på. Börjar med dokumentationen idag.

--- a/webbutveckling_1/assignment/css/aboutstyle.css
+++ b/webbutveckling_1/assignment/css/aboutstyle.css
@@ -16,11 +16,9 @@ header {
 
 div {
     background-color: white;
-    margin: auto;
+    margin: auto auto 5em auto;
     border: 2px solid black;
     width: 90%;
-    padding: 10px;
-    margin-bottom: 5em;
     padding: 2em;
 }
 
