--- a/Gränssnittsdesign/assignment/css/black_orangestyle.css
+++ b/Gränssnittsdesign/assignment/css/black_orangestyle.css
@@ -10,13 +10,12 @@ body {
 header {
     height: auto;
     width: auto;
-    background: black;
+    background: orange;
     color: white;
     padding-top: 40px;
 }
 
 .header {
-    border: 1px solid black;
     text-align: center;
 }
 
@@ -46,14 +45,14 @@ li {
 }
 
 .navbar-item {
-    background-color: black;
+    background-color: rgb(184, 82, 82);
     border: 1px solid black;
     text-align: center;
     padding: 10px;
 }
 
 .navbar-hover:hover {
-    background-color: mintcream;
+    background-color: orange;
     color: black;
 }
 
@@ -67,7 +66,8 @@ li {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     text-align: center;
-    background: mintcream;
+    background: black;
+    color: orange;
 }
 
 #album-card-container {
@@ -82,7 +82,7 @@ li {
 button {
     width: 5em;
     color: white;
-    background-color: black;
+    background-color: rgb(184, 82, 82);
 }
 
 footer {
@@ -91,7 +91,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
-    background-color: black;
+    background-color: orange;
     color: white;
     display: block;
 }
@@ -140,5 +140,3 @@ footer {
         grid-template-columns: 1fr 2fr 1fr;
     }
 }
-
-
