--- a/Gränssnittsdesign/assignment/css/blueishstyle.css
+++ b/Gränssnittsdesign/assignment/css/blueishstyle.css
@@ -10,13 +10,12 @@ body {
 header {
     height: auto;
     width: auto;
-    background: black;
+    background: #303F9F;
     color: white;
     padding-top: 40px;
 }
 
 .header {
-    border: 1px solid black;
     text-align: center;
 }
 
@@ -67,7 +66,7 @@ li {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     text-align: center;
-    background: mintcream;
+    background: #03A9F4;
 }
 
 #album-card-container {
@@ -91,7 +90,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
-    background-color: black;
+    background-color: #303F9F;
     color: white;
     display: block;
 }
