--- a/Gränssnittsdesign/assignment/css/purplestyle.css
+++ b/Gränssnittsdesign/assignment/css/purplestyle.css
@@ -10,13 +10,12 @@ body {
 header {
     height: auto;
     width: auto;
-    background: black;
+    background: #512DA8;
     color: white;
     padding-top: 40px;
 }
 
 .header {
-    border: 1px solid black;
     text-align: center;
 }
 
@@ -53,7 +52,7 @@ li {
 }
 
 .navbar-hover:hover {
-    background-color: mintcream;
+    background-color: #D1C4E9;
     color: black;
 }
 
@@ -67,7 +66,7 @@ li {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     text-align: center;
-    background: mintcream;
+    background: #E040FB;
 }
 
 #album-card-container {
@@ -91,7 +90,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
-    background-color: black;
+    background-color: #512DA8;
     color: white;
     display: block;
 }
