--- a/Gränssnittsdesign/assignment/css/black_orangestyle.css
+++ b/Gränssnittsdesign/assignment/css/black_orangestyle.css
@@ -67,7 +67,7 @@ li {
     grid-template-columns: 1fr 4fr 1fr;
     text-align: center;
     background: black;
-    color: orange;
+    color: white;
 }
 
 #album-card-container {
