--- a/Gränssnittsdesign/assignment/css/purplestyle.css
+++ b/Gränssnittsdesign/assignment/css/purplestyle.css
@@ -66,7 +66,7 @@ li {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     text-align: center;
-    background: #E040FB;
+    background: #D1C4E9;
 }
 
 #album-card-container {
