--- a/Gränssnittsdesign/assignment/css/purplestyle.css
+++ b/Gränssnittsdesign/assignment/css/purplestyle.css
@@ -62,7 +62,7 @@ li {
 }
 
 #grid-container {
-    height: 90vh;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     text-align: center;
@@ -71,7 +71,7 @@ li {
 
 #album-card-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     padding: 2em;
     grid-gap: 2em;
     margin-top: 170px;
@@ -103,7 +103,7 @@ footer {
 @media only screen and (min-width: 768px) {
     #album-card-container {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .logo {
@@ -123,7 +123,7 @@ footer {
 @media only screen and (min-width: 1200px) {
     #album-card-container {
         display: grid;
-        grid-template-columns: repeat(8, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 
     .logo {
