--- a/Gränssnittsdesign/assignment/css/black_orangestyle.css
+++ b/Gränssnittsdesign/assignment/css/black_orangestyle.css
@@ -7,6 +7,11 @@ body {
     padding: 0;
 }
 
+@font-face {
+    font-family: 'PT Sans Narrow';
+    src: url('../fonts/')
+}
+
 header {
     height: auto;
     width: auto;
