--- a/Gränssnittsdesign/assignment/css/blueishstyle.css
+++ b/Gränssnittsdesign/assignment/css/blueishstyle.css
@@ -7,6 +7,11 @@ body {
     padding: 0;
 }
 
+@font-face {
+    font-family: 'Bubblegum Sans';
+    src: url('../fonts/BubblegumSans-Regular.ttf')
+}
+
 header {
     height: auto;
     width: auto;
@@ -77,6 +82,7 @@ li {
     margin-top: 170px;
     padding-bottom: 200px;
     font-size: 20px;
+    font-family: "Bubblegum Sans", sans-serif;
 }
 
 button {
