--- a/Gränssnittsdesign/assignment/css/purplestyle.css
+++ b/Gränssnittsdesign/assignment/css/purplestyle.css
@@ -7,6 +7,11 @@ body {
     padding: 0;
 }
 
+@font-face {
+    font-family: 'Julius Sans One';
+    src: url('../fonts/JuliusSansOne-Regular.ttf')
+}
+
 header {
     height: auto;
     width: auto;
