--- a/Gränssnittsdesign/assignment/css/purplestyle.css
+++ b/Gränssnittsdesign/assignment/css/purplestyle.css
@@ -81,6 +81,8 @@ li {
     grid-gap: 2em;
     margin-top: 170px;
     padding-bottom: 200px;
+    font-family: "Julius Sans One", sans-serif;
+    font-size: 25px;
 }
 
 button {
