--- a/Gränssnittsdesign/assignment/css/red_orangestyle.css
+++ b/Gränssnittsdesign/assignment/css/red_orangestyle.css
@@ -7,6 +7,11 @@ body {
     padding: 0;
 }
 
+@font-face {
+    font-family: 'Expletus Sans';
+    src: url('../fonts/ExpletusSans-Italic-VariableFont_wght.ttf')
+}
+
 header {
     height: auto;
     width: auto;
@@ -77,6 +82,8 @@ li {
     grid-gap: 2em;
     margin-top: 170px;
     padding-bottom: 200px;
+    font-family: "Expletus Sans", sans-serif;
+    font-size: 20px;
 }
 
 button {
