--- a/webbutveckling_2/assignment/assignment/src/components/cart/Cart.css
+++ b/webbutveckling_2/assignment/assignment/src/components/cart/Cart.css
@@ -32,6 +32,8 @@
     overflow: auto;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
+    margin-top: 100px;
+    right: 525px;
 }
 
 .dropdown-content a {
