--- a/webbutveckling_2/assignment3/assignment3/src/components/card/CardItem.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/card/CardItem.module.css
@@ -1,4 +1,12 @@
-.cdCover {
-    height: 250px;
-    width: 250px;
+.image{
+    height: 200px;
+}
+
+.byeButton {
+    width: 70px;
+    background-color: #54626b;
+    border-radius: 5px;
+    color: #FFF;
+    border-style: none;
+    cursor: pointer;
 }
