--- a/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
@@ -4,12 +4,6 @@
     grid-template-columns: 1fr 3fr 1fr;
 }
 
-.logo img {
-    padding-top: 1.5em;
-    margin: 1em auto;
-    width: 100px;
-}
-
 .logo, .title{
     text-align: center;
 }
@@ -18,40 +12,31 @@
     margin-top:  4em;
     font-size: 20px;
 }
-.searchArea {
-    text-align: center;
-    padding: 1.5em 0;
-}
-.searchArea input{
-    padding:0.5em 6em;
-    text-align: center;
 
-}
-
-.searchArea button{
-    padding: 0.5em;
-}
 .checkOut {
     text-align: center;
     margin-bottom: 2em;
 }
 
 .checkoutDropdownButton{
-    color: var( --secondary-text);
-    padding: 20px 20px;
+    padding: 10px 10px;
     border: none;
     border-radius: 4px;
     outline: none;
-    margin-top: 3.5em;
     background-color: var(--primary-text);
     font-size: 1em;
     cursor: pointer;
 }
 
 .checkoutDropdownButton:hover, .checkoutDropdownButton:focus {
-    background-color: lightslategray;
+    background-color: white;
 }
 
 .label {
     padding-left: 8px;
+}
+
+.logo {
+    width: 100px;
+    height: 100px;
 }
