Fortsätter med css

--- a/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
@@ -36,6 +36,12 @@
     padding-left: 8px;
 }
 
+.logoCursor {
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+}
+
 .logo {
     width: 100px;
     height: 100px;
