--- a/webbutveckling_2/assignment3/assignment3/src/components/card/CardItem.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/card/CardItem.module.css
@@ -1,5 +1,6 @@
-.image{
-    height: 200px;
+.image {
+    height: 300px;
+    width: 300px;
 }
 
 .byeButton {
@@ -9,4 +10,12 @@
     color: #FFF;
     border-style: none;
     cursor: pointer;
+}
+
+.gridContainer {
+    width: 350px;
+    box-shadow: 10px 15px 18px #888888;
+    margin-bottom: 50px;
+    background-color: snow;
+    padding: 20px;
 }
