--- a/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
@@ -1,7 +1,7 @@
 
 .gridContainerHeader {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .logo, .title{
@@ -45,4 +45,12 @@
 .logo {
     width: 100px;
     height: 100px;
+}
+
+.centerText {
+    text-align: center;
+}
+
+.alignVertically {
+    padding-top: 50px;
 }
