--- a/webbutveckling_2/assignment3/assignment3/src/components/navBar/navBar.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/navBar/navBar.module.css
@@ -1,9 +1,12 @@
 .navbar {
-    margin: 0;
+    margin: 0 0 0 150px;
     padding: 0;
-    height: 2em;
+    height: 3em;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
+    width: 90%;
+    align-content: center;
+
 }
 
 li {
@@ -14,8 +17,8 @@ li {
 
 .navBarItems {
     background-color: #9eebcf;
-    border: 1px solid black;
     text-align: center;
+    padding: 10px;
 }
 
 .navBarItems:hover {
