--- a/webbutveckling_2/assignment3/assignment3/src/components/shoppingCart/ShoppingCartItem.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/shoppingCart/ShoppingCartItem.module.css
@@ -18,3 +18,18 @@
     width: 25px;
     cursor: pointer;
 }
+
+.verticallyAlign {
+    margin-top: 50px;
+    background-color: #ea3f3f;
+    border-radius: 5px;
+    border-style: none;
+    width: 50px;
+    padding: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.hr {
+    width: 95%;
+}
