--- a/webbutveckling_2/assignment3/assignment3/src/components/shoppingCart/ShoppingCartList.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/shoppingCart/ShoppingCartList.module.css
@@ -1,6 +1,6 @@
 .dropdownContent {
     position: absolute;
-    background-color: white;
+    background-color: lightgray;
     overflow: auto;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -8,12 +8,8 @@
     text-align: center;
 }
 
-.hr {
-    width: 450px;
-}
-
 .payButton {
-    background-color: #7edd7e;
+    background-color: lightgreen;
     border-radius: 5px;
     border-style: none;
     width: 90px;
@@ -39,4 +35,8 @@
     padding: 5px;
     margin-right: 10px;
     cursor: pointer;
+}
+
+.hr {
+    width: 95%;
 }
