--- a/webbutveckling_2/assignment3/assignment3/src/utils/global/css/global.css
+++ b/webbutveckling_2/assignment3/assignment3/src/utils/global/css/global.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Bubblegum Sans', sans-serif;
-  background-color: #03A9F4;
+  background-color: lightgray;
 }
 
 @font-face {
