--- a/webbutveckling_2/assignment3/assignment3/src/components/card/CardItem.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/card/CardItem.module.css
@@ -14,7 +14,7 @@
 
 .gridContainer {
     width: 350px;
-    box-shadow: 10px 15px 18px #888888;
+    box-shadow: 5px 10px 8px 10px #888888;
     margin-bottom: 50px;
     background-color: snow;
     padding: 20px;
