--- a/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/header/Header.module.css
@@ -34,6 +34,7 @@
 
 .label {
     padding-left: 8px;
+    font-size: 20px;
 }
 
 .logoCursor {
@@ -53,4 +54,18 @@
 
 .alignVertically {
     padding-top: 50px;
+}
+
+.h1 {
+    margin: 0;
+    padding: 0;
+}
+
+.h1MarginTop {
+    margin: 30px 0 0 0;
+    padding: 0;
+}
+
+.cart {
+    font-size: 30px;
 }
