--- a/webbutveckling_2/assignment3/assignment3/src/components/navBar/navBar.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/navBar/navBar.module.css
@@ -13,6 +13,12 @@ li {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    font-size: 20px;
+    color: black;
+}
+
+a:link {
+    text-decoration: none;
 }
 
 .navBarItems {
