--- a/webbutveckling_2/assignment3/assignment3/src/components/shoppingCart/ShoppingCartList.module.css
+++ b/webbutveckling_2/assignment3/assignment3/src/components/shoppingCart/ShoppingCartList.module.css
@@ -24,7 +24,7 @@
 }
 
 .totalSum {
-    margin-left: 350px;
+    margin-left: 300px;
 }
 
 .closeButton {
@@ -39,4 +39,16 @@
 
 .hr {
     width: 95%;
+}
+
+.scrollWindowProperties {
+    overflow-y: scroll;
+    min-height: 100px;
+    max-height: 600px;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.scrollWindowProperties::-webkit-scrollbar {
+    display: none;
 }
