--- a/webbutveckling_2/assignment3/assignment3/src/utils/global/css/global.css
+++ b/webbutveckling_2/assignment3/assignment3/src/utils/global/css/global.css
@@ -5,11 +5,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Bubblegum Sans', sans-serif;
+  font-family: 'Roboto Regular', sans-serif;
   background-color: lightgray;
 }
 
 @font-face {
   font-family: 'Bubblegum Sans';
   src: url("../fonts/BubblegumSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: 'Roboto Regular';
+  src: url("../fonts/Roboto-Regular.ttf");
 }
