--- a/Webbserverprogrammering_1/assignment/frontend/frontend/src/components/updateData/UpdateData.module.css
+++ b/Webbserverprogrammering_1/assignment/frontend/frontend/src/components/updateData/UpdateData.module.css
@@ -1,13 +1,15 @@
 .centerContent {
     text-align: center;
-    background-color: red;
+    background-color: lightgray;
     width: 50%;
     margin: auto;
+    margin-bottom: 20px;
 }
 
 .inputStyle {
     margin-bottom: 20px;
     border-radius: 10px;
+    margin-right: 10px;
 }
 
 .buttonStyle {
@@ -33,4 +35,13 @@
 /* Darker background-color on hover */
 .ulStyle li:hover {
     background: #ddd;
+}
+
+.h1Style {
+    background-color: lightgrey;
+}
+
+.pStyle {
+    background-color: lightgrey;
+    font-size: 18px;
 }
