--- a/Webbserverprogrammering_1/assignment/frontend/frontend/src/utils/global/css/global.css
+++ b/Webbserverprogrammering_1/assignment/frontend/frontend/src/utils/global/css/global.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     text-align: center;
+    background-color: lightblue;
 }
 
 /* Remove margins and padding from the list */
